# pocketbase-client

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
pocketbase/: __init__.py  client.py  collection.py  errors.py
tests/: test_pb.py
