[project]
name = "pocketbase-client"
version = "0.1.5"
description = "Python client for pocketbase"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.28.1",
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "pocketbase"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
]
